Clarity update
This commit mainly focuses on clarifying & correcting the website in a handful
of different areas, e.g.:

 - Updating the Copyright date in the footer
 - Removing irrelevant, outdated, or redundant pages
 - Fixing broken links where possible & removing defunct ones
 - Consolidating community-related text from many pages into specific,
   comprehensive pages (e.g. the new "Contribute", "Contact Us", & "Report
   Issues" pages)
 - Clarifying menu text
 - Replacing 'ActiveMQ 5' with 'ActiveMQ "Classic"' in some places so that the
   version number isn't tied so closely with the code-base. This was raised on
   the dev list as a pain point if a new major version of "Classic" is
   released.
 - Correcting a handful of visual issues in particular the way configuration
   parameters were being wrapped in tables which made them hard to read